# ainara

./: .aiderignore  .gitignore  .gitmodules  AINARA_WHITEPAPER_V1.md  LICENSE.LGPL  Makefile  ORAKLE_MANIFESTO.md  README.md  TOKENOMICS.md  __init__.py  client_based_skills_llm_paper_draft.md  diff  entitlements.mac.plist  eslint.config.mjs  evaluation_report_20250611_102538.csv  package-lock.json  package.json  package.json.windows  pyproject.toml  requirements.in  requirements.txt  server.py
.github/: FUNDING.yml
ainara/: __init__.py
config/: ainara.yaml.sample  orakle.yaml  orakle.yaml.sample
docs/: skill_suggestions.md
framework/: capabilities_manager.py  capability_matcher.py  chat_manager.py  chat_memory.py  config.py  llm_backend.py  loading_animation.py  logging_setup.py  orakle_middleware.py  pybridge.py  recipe_manager.py  skill.py  template_manager.py  tts_backend.py  utils.py
kommander/: __init__.py  __main__.py  kommander  kommander.py
orakle/: __init__.py  orakle  recipe_manager.py  requirements.txt  run  server.py  skill.py  wsgi.py
polaris/: README.txt  main.js  package.json
resources/: ainara.yaml.defaults  config.schema.json  installer.nsh
scripts/: _build.py  build  import_logs.py  launch_habia.sh  liveMCPBench_run_conversation.py  prepare_tiktoken.py  services.py  test_coinmarketcap.py  update_headers.py  update_version.sh
static/: README.md
templates/: framework.chat_manager.command_interpretation.mu  framework.chat_manager.orakle_prompt.mu  framework.chat_manager.system_prompt.mu  framework.chat_manager.update_summary.mu
(+241 files in other folders)
